[package]
name = "compartya-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrplug = { git = "https://github.com/R2NorthstarTools/rrplug.git" }
compartya-shared = { path = "../compartya-shared" }
laminar = "0.5.0"
nanoid = "0.4.0"
parking_lot = "0.12.1"
crossbeam-channel = "0.5"
windows = { version = "0.53.0", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_Security"] }

[lib]
crate-type = ["cdylib"]
